# kamui

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
core/: .gitignore  README.md  YOUTUBE_IMPLEMENTATION.md  pyproject.toml
core/backend/: __init__.py  __main__.py  app.py  cli.py  db.py  file_monitor.py  image_fetch.py  logger_config.py  paths.py  video_manager.py  video_thumbnail.py  youtube_analytics.py  youtube_rate_limit.py  youtube_read.py  youtube_uploader.py
electron/: main.cjs
src/: App.jsx  index.css
src/components/dashboard/: ActivityChart.jsx  RecentClips.jsx  StorageWidget.jsx  index.js
src/components/layout/: Header.jsx  Layout.jsx  Sidebar.jsx  Terminal.jsx  WindowControls.jsx  YoutubeDisconnectBanner.jsx
src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  ConfirmModal.jsx  KamuiLoader.jsx  KamuiVortex.jsx  MetricCard.jsx  Progress.jsx  SelectMenuButton.jsx  SelectionCheckbox.jsx  SharinganIcon.jsx  index.js
src/components/upload/: ManualUploadModal.jsx
src/components/youtube/: VideoEditModal.jsx
src/context/: BackendStatusContext.jsx
src/hooks/: useDashboardSummary.js  useEvents.js  useFolderSummary.js  useFolderVideos.js  useYoutubeAnalytics.js  useYoutubeChannel.js  useYoutubeVideos.js
src/lib/: api.js  utils.js
src/pages/: History.jsx  Home.jsx  Local.jsx  Settings.jsx  SetupWizard.jsx  YouTube.jsx  YouTubeRoute.jsx
